Info window slides in animation and fix text-overflow

--- a/css/mymap.less
+++ b/css/mymap.less
@@ -16,13 +16,14 @@ html{
 			background-color: #4285F4;
 			position: absolute;
 			top: 0;
-			left: -408px;
+			transition: transform 0.3s ease-in-out;
+			transform: translateX(-408px);
 			display: none;
 			&.is-active{
 				display: block;
 			}
 			&.visible{
-				left: 0;
+				transform: translateX(0px);
 			}		
 			#hero-header-wrapper{
 				width: 100%;
@@ -41,8 +42,12 @@ html{
 				#place-basic-info{
 					padding: 16px 24px 20px;
 					.info-text{
+						width: 360px;
 						color: white;
 						font-family: Roboto, Arial, sans-serif;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
 					}
 					&.place-name{
 						font-size: 18px;
